--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.anko:anko-common:$anko_version"
     compile "com.google.code.gson:gson:2.4"
+    compile "com.squareup.picasso:picasso:2.5.2"
 }
 buildscript {
     ext.kotlin_version = '1.0.1-2'
