add constraint layout dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     implementation "androidx.appcompat:appcompat:$android_appompat_version"
     implementation "androidx.recyclerview:recyclerview:$android_recycler_version"
+    implementation "androidx.constraintlayout:constraintlayout:$android_constraintlayout_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "com.google.code.gson:gson:2.8.6"
