--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext.android_recycler_version = '1.1.0'
     ext.android_appompat_version = '1.1.0'
+    ext.android_constraintlayout_version = "2.0.0-rc1"
     ext.anko_version = '0.8.3'
     repositories {
         jcenter()
