--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
     buildFeatures {
         viewBinding true
     }
@@ -38,6 +43,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.13'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7"
+
     implementation "androidx.appcompat:appcompat:$android_appompat_version"
     implementation "androidx.recyclerview:recyclerview:$android_recycler_version"
     implementation "androidx.constraintlayout:constraintlayout:$android_constraintlayout_version"
@@ -45,6 +52,10 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
+    implementation "com.google.code.gson:gson:2.8.6"
 }
 repositories {
     mavenCentral()
