--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext.android_appompat_version = '1.1.0'
     ext.android_constraintlayout_version = "2.0.0-rc1"
     ext.anko_version = '0.8.3'
+    ext.retrofit_version = "2.9.0"
+
     repositories {
         jcenter()
         google()
