--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="pe.androidperu.marvelheroes">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name="pe.devpicon.android.marvelheroes.app.MarvelHeroesApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="pe.androidperu.marvelheroes.ui.activities.MainActivity">
+        android:theme="@style/AppTheme"
+        tools:targetApi="n">
+        <activity android:name="pe.devpicon.android.marvelheroes.presentation.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +22,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
