--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,12 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:$android_appompat_version"
     implementation "androidx.recyclerview:recyclerview:$android_recycler_version"
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:$android_constraintlayout_version"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
+
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.picasso:picasso:2.71828"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
