--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.android_constraintlayout_version = "2.0.0-rc1"
     ext.anko_version = '0.8.3'
     ext.retrofit_version = "2.9.0"
+    ext.room_version = "2.2.5"
 
     repositories {
         jcenter()
