--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext.android_recycler_version = '1.1.0'
     ext.android_appompat_version = '1.1.0'
-    ext.android_constraintlayout_version = "2.0.0-rc1"
+    ext.android_constraintlayout_version = "2.0.0"
     ext.anko_version = '0.8.3'
     ext.retrofit_version = "2.9.0"
     ext.room_version = "2.2.5"
